clicking on table reroutes to search option

--- a/src/app/components/areas.json
+++ b/src/app/components/areas.json
@@ -12,7 +12,7 @@
             93,
             374
         ],
-        "preFillColor": "#EF4444",
+        "preFillColor": "#ffffff",
         "fillColor": "#000000"
     },
     {
@@ -28,7 +28,7 @@
             140,
             351
         ],
-        "preFillColor": "#EF4444",
+        "preFillColor": "#ffffff",
         "fillColor": "#000000"
     },
     {
@@ -44,7 +44,7 @@
             186,
             328
         ],
-        "preFillColor": "#EF4444",
+        "preFillColor": "#ffffff",
         "fillColor": "#000000"
     },
     {
@@ -60,7 +60,7 @@
             233,
             304
         ],
-        "preFillColor": "#EF4444",
+        "preFillColor": "#ffffff",
         "fillColor": "#000000"
     },
     {
@@ -76,7 +76,7 @@
             326,
             257
         ],
-        "preFillColor": "#38BDF8",
+        "preFillColor": "#ffffff",
         "fillColor": "#000000"
     },
     {
@@ -92,7 +92,7 @@
             326,
             257
         ],
-        "preFillColor": "#EF4444",
+        "preFillColor": "#ffffff",
         "fillColor": "#000000"
     },
     {
@@ -108,7 +108,7 @@
             373,
             234
         ],
-        "preFillColor": "#38BDF8",
+        "preFillColor": "#ffffff",
         "fillColor": "#000000"
     }
 ]
