Update Teams + Categories

--- a/src/app/components/areas.json
+++ b/src/app/components/areas.json
@@ -1,6 +1,6 @@
 [
     {
-        "name": "5-Andrea Liao-1.a",
+        "name": "6-Andrea Liao-1.a",
         "shape": "poly",
         "coords": [
             77,
@@ -32,7 +32,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "7-Lines and Letters-2",
+        "name": "8-Lines and Letters-2",
         "shape": "poly",
         "coords": [
             124,
@@ -48,7 +48,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "7-Stellar Surveillance-3",
+        "name": "8-Stellar Surveillance-3",
         "shape": "poly",
         "coords": [
             171,
@@ -64,7 +64,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "7-Quad Contest-4",
+        "name": "8-Quad Contest-4",
         "shape": "poly",
         "coords": [
             217,
@@ -91,22 +91,6 @@
             297,
             279,
             281
-        ],
-        "preFillColor": "#EF4444",
-        "fillColor": "#000000"
-    },
-    {
-        "name": "0-KERWY-6",
-        "shape": "poly",
-        "coords": [
-            312,
-            264,
-            342,
-            279,
-            357,
-            272,
-            326,
-            257
         ],
         "preFillColor": "#EF4444",
         "fillColor": "#000000"
@@ -336,7 +320,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "7-Blockheads-15.a",
+        "name": "8-Blockheads-15.a",
         "shape": "poly",
         "coords": [
             198,
@@ -352,7 +336,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "12-ReQuest-15.b",
+        "name": "13-ReQuest-15.b",
         "shape": "poly",
         "coords": [
             213,
@@ -368,7 +352,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "12-Poole-16",
+        "name": "13-Poole-16",
         "shape": "poly",
         "coords": [
             245,
@@ -384,7 +368,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "12-Love Alarm-17",
+        "name": "13-Love Alarm-17",
         "shape": "poly",
         "coords": [
             291,
@@ -400,7 +384,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "12-Flex-18",
+        "name": "13-Flex-18",
         "shape": "poly",
         "coords": [
             337,
@@ -416,7 +400,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "12-Muse-19",
+        "name": "13-Muse-19",
         "shape": "poly",
         "coords": [
             387,
@@ -432,7 +416,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "12-Relative Refresh-20",
+        "name": "13-Relative Refresh-20",
         "shape": "poly",
         "coords": [
             432,
@@ -528,7 +512,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "10-RECUMA-26.a",
+        "name": "11-RECUMA-26.a",
         "shape": "poly",
         "coords": [
             711,
@@ -592,7 +576,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "12-NiT-28",
+        "name": "13-NiT-28",
         "shape": "poly",
         "coords": [
             254,
@@ -640,7 +624,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "5-Team 22-31",
+        "name": "6-Team 22-31",
         "shape": "poly",
         "coords": [
             394,
@@ -800,22 +784,6 @@
         "fillColor": "#000000"
     },
     {
-        "name": "0-Silk AI-41",
-        "shape": "poly",
-        "coords": [
-            383,
-            420,
-            413,
-            435,
-            427,
-            428,
-            397,
-            414
-        ],
-        "preFillColor": "#EF4444",
-        "fillColor": "#000000"
-    },
-    {
         "name": "0-Team CHATuchak-42",
         "shape": "poly",
         "coords": [
@@ -864,7 +832,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "5-PinCS-45.a",
+        "name": "6-PinCS-45.a",
         "shape": "poly",
         "coords": [
             753,
@@ -896,7 +864,7 @@
         "fillColor": "#000000"
     },
     {
-        "name": "5-Team 16-46",
+        "name": "6-Team 16-46",
         "shape": "poly",
         "coords": [
             797,
@@ -971,6 +939,70 @@
             245,
             904,
             230
+        ],
+        "preFillColor": "#EF4444",
+        "fillColor": "#000000"
+    },
+    {
+        "name": "4-TreeListings-48",
+        "shape": "poly",
+        "coords": [
+            494,
+            434,
+            525,
+            449,
+            539,
+            442,
+            509,
+            427
+        ],
+        "preFillColor": "#818cf8",
+        "fillColor": "#000000"
+    },
+    {
+        "name": "0-Moosh-51",
+        "shape": "poly",
+        "coords": [
+            699,
+            332,
+            730,
+            347,
+            745,
+            340,
+            714,
+            325
+        ],
+        "preFillColor": "#EF4444",
+        "fillColor": "#000000"
+    },
+    {
+        "name": "0-KERBY-6",
+        "shape": "poly",
+        "coords": [
+            312,
+            264,
+            342,
+            279,
+            357,
+            272,
+            326,
+            257
+        ],
+        "preFillColor": "#EF4444",
+        "fillColor": "#000000"
+    },
+    {
+        "name": "0-Silk AI-41",
+        "shape": "poly",
+        "coords": [
+            383,
+            420,
+            413,
+            435,
+            427,
+            428,
+            397,
+            414
         ],
         "preFillColor": "#EF4444",
         "fillColor": "#000000"
